fix spacing

--- a/src/components/screens/home/sectionDiagramSolution.scss
+++ b/src/components/screens/home/sectionDiagramSolution.scss
@@ -1,1 +1,6 @@
 @import "../../globalVariables.scss";
+
+.container {
+  padding: 0px;
+  composes: container from global;
+}
